GNOME Bugzilla – Bug 695345
[WK2] Does not store HTTP cache in temporary dir when in private mode
Last modified: 2013-03-12 19:08:41 UTC
This needs new API in WK2, like webkit_web_context_set_disk_cache_directory.
Created attachment 238685 [details] [review] Patch Required wk API already landed in the stable branch.
Review of attachment 238685 [details] [review]: Excellent, thanks.