Set the disk cache directory depending on the ephy mode in WebKit2

https://bugzilla.gnome.org/show_bug.cgi?id=695345